# qml-simplenodeeditor

./: .gitignore  CMakeLists.txt  LightNodeEditor.pro  NodeGraphEditor.qrc  main.cpp  main.qml
nge/: NodeGraphEditor.qml  qmldir
nge/components/: Edge.qml  InputPort.qml  Node.qml  OutputPort.qml
nge/components/properties/: FloatPropertyInput.qml
nge/controller/: nodegraphcontroller.cpp  nodegraphcontroller.h
nge/model/: uiedge.cpp  uiedge.h  uiedgemodel.cpp  uiedgemodel.h  uinode.cpp  uinode.h  uinodemodel.cpp  uinodemodel.h
nge/styles/: NodeStyles.qml  qmldir
